# MINIGUI_1.3.3

./: Makefile.am  Makefile.in  acconfig.h  arm_lib.sh  config.h  config.h.in  libtool
etc/: MiniGUI-flat.cfg
examples/: Makefile.in
ext/control/: grid.c
ext/include/: filedlg.h
ext/mywins/: filedlg.c
include/: Makefile.am  Makefile.in  gdi.h  window.h
src/control/: button.c
src/font/: Makefile.am  Makefile.in  charset.c  devfont.c  freetype.c  rawbitmap.c  rawbitmap.h  varbitmap.c
src/font/in-core/: Makefile.am  Makefile.in
src/gal/native/: native.c  scr_fb.c
src/gui/: keyboard.c  window.c
src/ial/: 2410.c  Makefile.am  Makefile.in  ial.c
src/ial/native/: native.c
src/include/: misc.h
src/kernel/: cursor.c  desktop-comm.c  desktop.c  event.c  init.c  message.c
src/main/: main.c
src/misc/: misc.c
src/newgal/: surface.c  video.c
src/newgal/fbcon/: fbvideo.c
src/newgdi/: drawtext.c  logfont.c  readbmp.c  text.c
src/sysres/: mgetc.c  syscfg.c
