# The input Makefile for MiniGUI header files

# The directory where the include files will be installed
libminiguiincludedir = $(includedir)/minigui

# Which header files to install
libminiguiinclude_HEADERS =     \
    common.h endianrw.h fixedmath.h \
    minigui.h gdi.h window.h control.h \
    vcongui.h \
    dti.c 

# mywindows.h logwin.h filedlg.h
